PR26412 UBSAN: objcopy.c:3026 null pointer fwrite

PR 26412
	* objcopy.c (copy_object): Don't fwrite NULL contents.